[tool.poetry]
name = "payment-api"
version = "1.0.0"
description = "REST API for payment processing"
authors = ["Developer <alekseyserzh88@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
sanic = "23.12.1"
sqlalchemy = "2.0.25"
asyncpg = "0.29.0"
alembic = "1.13.1"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
pydantic = {version = "2.5.3", extras = ["email"]}
pydantic-settings = "2.1.0"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-asyncio = "0.23.3"
httpx = "0.26.0"
aiosqlite = "0.19.0"
sanic-testing = "24.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"